--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Use environment variables as consts in python"
 authors = ["Ofek Weiss <ofek1weiss@gmail.com>"]
 readme = "README.md"
 packages = [{include = "env_consts"}]
+repository = "https://github.com/ofek1weiss/env_consts"
 
 [tool.poetry.dependencies]
 python = "^3.7"
